--- a/app/webapp/templates/webapp/base.html
+++ b/app/webapp/templates/webapp/base.html
@@ -9,6 +9,8 @@
     <title>{% block title %}{{ APP_NAME }}{% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static 'assets/images/logo.png' %}">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100" rel="stylesheet" />
+
     {% htmx_script %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
