--- a/app/webapp/templates/webapp/home.html
+++ b/app/webapp/templates/webapp/home.html
@@ -1,5 +1,6 @@
 {% extends "webapp/base.html" %}
 {% load static %}
+{% load icon %}
 
 {% block hero %}
 <div class="relative isolate w-full">
@@ -94,7 +95,7 @@
             <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-2">
                 <div class="flex flex-col">
                     <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-                        Open Source Development
+                        {% icon "code" %} Open Source Development
                     </dt>
                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-600">
                         <p class="flex-auto">Contribute to our open-source GitHub repository and help improve the platform's features and functionality.</p>
@@ -102,7 +103,7 @@
                 </div>
                 <div class="flex flex-col">
                     <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-                        Community Moderation
+                        {% icon "people" %} Community Moderation
                     </dt>
                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-600">
                         <p class="flex-auto">Volunteer as a moderator to review submissions and corrections, ensuring data quality and accuracy.</p>
@@ -110,7 +111,7 @@
                 </div>
                 <div class="flex flex-col">
                     <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-                        Data Contribution
+                        {% icon "add" %} Data Contribution
                     </dt>
                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-600">
                         <p class="flex-auto">Add new boats to our database or contribute corrections to existing boat information.</p>
@@ -118,7 +119,7 @@
                 </div>
                 <div class="flex flex-col">
                     <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-                        Support the Project
+                        {% icon "coffee" %} Support the Project
                     </dt>
                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-600">
                         <p class="flex-auto">Buy us a cup of grog to help keep the servers running and support ongoing development.</p>
