--- a/app/webapp/templates/webapp/base.html
+++ b/app/webapp/templates/webapp/base.html
@@ -98,6 +98,9 @@
     <footer class="bg-gray-50 mt-auto">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="text-center text-gray-500">
+                <p>
+                    <a href="{% url 'terms_of_service' %}" class="text-accent hover:underline">Terms of Service</a>
+                </p>
                 <p>&copy; {% now "Y" %} {{ APP_NAME }}. All rights reserved.</p>
             </div>
         </div>
