--- a/app/webapp/templates/webapp/base.html
+++ b/app/webapp/templates/webapp/base.html
@@ -130,6 +130,8 @@
         {% block content %}{% endblock %}
     </main>
 
+    {% block sponsors %}{% endblock %}
+
     <footer class="bg-gray-50 mt-auto">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="text-center text-gray-500">
