--- a/app/webapp/templates/webapp/home.html
+++ b/app/webapp/templates/webapp/home.html
@@ -128,3 +128,24 @@
     </div>
 </div>
 {% endblock %}
+
+{% block sponsors %}
+<div class="bg-gray-50 py-16">
+    <div class="max-w-4xl mx-auto px-6 text-center">
+        <h2 class="text-2xl font-bold text-primary mb-2">Thank You to Our Sponsors</h2>
+        <p class="text-gray-700 mb-8">These organizations support the mission of open and free sailing for all.</p>
+        <div class="flex flex-wrap justify-center items-center gap-12">
+            <a href="https://pirate.baby" title="Pirate Baby Consulting LLC." target="_blank">
+                <img src="{% static 'assets/images/sponsors/pirate_baby.png' %}" alt="Pirate Baby" class="max-h-40 w-auto object-contain" />
+            </a>
+            <a href="https://windmillpointmarina.com/" title="Windmill Point Marina" target="_blank">
+                <img src="{% static 'assets/images/sponsors/windmill.png' %}" alt="Windmill" class="max-h-40 w-auto object-contain" />
+            </a>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+<footer class="bg-gray-50 mt-auto">
+```
+</footer>
